# quipus

./: .gitignore  .pylintrc  CONTRIBUTING.md  README.md  dev-requirements.txt  main.py  pyproject.toml  requirements.txt
.github/: not_enough_pylint_score.md
.github/workflows/: abc.yml  deploy-to-pypi.yml  manual-deploy-to-pypi.yml  pylint.yml  pytest.yml
data/: certificates.csv  certificates.xlsx
docker/: Dockerfile
models/: certificate_factory.py  template.py
quipus/: __init__.py
quipus/data_sources/: __init__.py  csv_source.py  data_source.py  database_source.py  dataframe_data_source.py  file_source.py  mongo_source.py  mysql_source.py  parquet_source.py  postgre_source.py  xlsx_source.py
quipus/models/: certificate_factory.py
quipus/services/: smtp_delivery.py
quipus/utils/: __init__.py  connectable.py  constants.py  craft.py  types.py
services/: smtp_delivery.py
src/: main.py
src/data_sources/: csv_data_source.py  postgresql_data_source.py  xlsx_data_source.py
src/models/: certificate.py  certificate_factory.py  template.py
src/services/: s3_delivery.py  sftp_delivery.py  template_manager.py
templates/: template_en.html  template_es.html
tests/: test_certificate_factory.py  test_certificate_model.py  test_csv_source.py  test_dataframe_source.py  test_postgresql_source.py  test_s3.py  test_sftp.py  test_smtp.py  test_template.py  test_template_model.py  test_xlsx_source.py
